--- a/ToDoReact/src/Styles/TareasComp.css
+++ b/ToDoReact/src/Styles/TareasComp.css
@@ -1,4 +1,4 @@
-.primera{
+.container{
     display: grid;
     grid-template-columns: auto auto auto;
     background-color: #242424;
@@ -6,7 +6,7 @@
     
 }
 
-  .primera > div {
+  .container > div {
     border: 0px solid #242424;
     padding: 5px;
     font-size: 10px;
